Added REST Assured tests updated for version 1.3..