@@ -11,23 +11,19 @@ import static io.restassured.RestAssured.given;
 import static org.hamcrest.Matchers.*;
 
 /**
- * LIVE Email Test - Sends REAL emails! (v1.3)
+ * LIVE Email Integration Tests (v1.3)
  * 
- * ⚠️ WARNING: This test sends ACTUAL emails!
+ * ⚠️ WARNING: These tests send REAL emails when SEND_LIVE_EMAILS = true
  * 
- * HOW TO RUN:
- * 1. Change SEND_LIVE_EMAILS = true
- * 2. Run tests
- * 3. Check inbox
- * 4. Change back to false!
+ * Endpoints (via Gateway):
+ * - /email/**    → email-service (admin only)
+ * - /api/auth/   → admin-service
  */
-@DisplayName("Email Service - LIVE Tests ⚠️ (v1.3)")
+@DisplayName("Email Service - Live Email Tests (v1.3)")
 @TestMethodOrder(MethodOrderer.OrderAnnotation.class)
 public class EmailSendLiveTest {
 
-    // ╔════════════════════════════════════════════════════════════════╗
-    // ║  ÄNDRA TILL true FÖR ATT SKICKA RIKTIGA EMAILS                ║
-    // ╚════════════════════════════════════════════════════════════════╝
+    // ⚠️ SET TO true TO SEND REAL EMAILS
     private static final boolean SEND_LIVE_EMAILS = false;
 
     private static RequestSpecification authenticatedSpec;
@@ -36,10 +32,11 @@ public class EmailSendLiveTest {
     private static final String BASE_URL = "https://p8.rantila.com";
     private static final String TEST_EMAIL = "cmb@p8.se";
     private static final String TEST_PASSWORD = "magnus123";
-    private static final String TEST_RECIPIENT = "taxiberglund@gmail.com";
+    private static final String RECIPIENT_EMAIL = "taxiberglund@gmail.com";
 
+    // Endpoints (v1.3)
     private static final String LOGIN_ENDPOINT = "/api/auth/login";
-    private static final String SEND_ENDPOINT = "/api/email/send";
+    private static final String SEND_ENDPOINT = "/email/send";
 
     @BeforeAll
     public static void setup() {
@@ -47,23 +44,20 @@ public class EmailSendLiveTest {
         RestAssured.baseURI = BASE_URL;
         RestAssured.enableLoggingOfRequestAndResponseIfValidationFails();
 
-        System.out.println("🚀 LIVE Email tests: " + BASE_URL);
-        System.out.println("📧 Recipient: " + TEST_RECIPIENT);
-        
-        if (SEND_LIVE_EMAILS) {
-            System.out.println("⚠️ SEND_LIVE_EMAILS = true → REAL EMAILS!");
-            jwtToken = getAuthToken();
-            if (jwtToken != null) {
-                authenticatedSpec = new RequestSpecBuilder()
-                        .setBaseUri(BASE_URL)
-                        .setContentType(ContentType.JSON)
-                        .setAccept(ContentType.JSON)
-                        .addHeader("Authorization", "Bearer " + jwtToken)
-                        .build();
-                System.out.println("✅ JWT acquired");
-            }
-        } else {
-            System.out.println("ℹ️ SEND_LIVE_EMAILS = false → Tests skipped");
+        System.out.println("🚀 Email LIVE tests: " + BASE_URL);
+        System.out.println("📍 Email endpoint: /email/**");
+        System.out.println("⚠️ SEND_LIVE_EMAILS = " + SEND_LIVE_EMAILS);
+
+        jwtToken = getAuthToken();
+
+        if (jwtToken != null) {
+            authenticatedSpec = new RequestSpecBuilder()
+                    .setBaseUri(BASE_URL)
+                    .setContentType(ContentType.JSON)
+                    .setAccept(ContentType.JSON)
+                    .addHeader("Authorization", "Bearer " + jwtToken)
+                    .build();
+            System.out.println("✅ JWT acquired");
         }
     }
 
@@ -90,93 +84,77 @@ public class EmailSendLiveTest {
 
     @Test
     @Order(1)
-    @DisplayName("LIVE: Send simple test email")
-    public void testSendSimpleEmail_LIVE() {
-        Assumptions.assumeTrue(SEND_LIVE_EMAILS, "SEND_LIVE_EMAILS = false");
+    @DisplayName("LIVE: Send welcome email")
+    public void testSendWelcomeEmail() {
+        Assumptions.assumeTrue(SEND_LIVE_EMAILS, "SEND_LIVE_EMAILS is false");
         Assumptions.assumeTrue(authenticatedSpec != null, "JWT required");
-
-        String timestamp = java.time.LocalDateTime.now()
-                .format(java.time.format.DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
 
         String emailBody = String.format("""
                 {
                     "to": "%s",
-                    "subject": "Perfect8 Test (v1.3) - %s",
-                    "body": "Test email from REST Assured.\\nTimestamp: %s",
-                    "htmlBody": false
+                    "subject": "Perfect8 Test - Welcome Email",
+                    "templateName": "welcome",
+                    "variables": {
+                        "customerName": "Test User",
+                        "loginUrl": "https://p8.rantila.com/login"
+                    }
                 }
-                """, TEST_RECIPIENT, timestamp, java.time.Instant.now());
+                """, RECIPIENT_EMAIL);
 
-        Response response = given()
-                .spec(authenticatedSpec)
-                .body(emailBody)
-        .when()
-                .post(SEND_ENDPOINT)
-        .then()
-                .statusCode(anyOf(is(200), is(201), is(202)))
-                .extract().response();
+        given().spec(authenticatedSpec).body(emailBody)
+        .when().post(SEND_ENDPOINT)
+        .then().statusCode(anyOf(is(200), is(201), is(202)));
 
-        System.out.println("✅ Email sent! Status: " + response.getStatusCode());
+        System.out.println("✅ Welcome email sent to " + RECIPIENT_EMAIL);
     }
 
     @Test
     @Order(2)
-    @DisplayName("LIVE: Send HTML formatted email")
-    public void testSendHtmlEmail_LIVE() {
-        Assumptions.assumeTrue(SEND_LIVE_EMAILS, "SEND_LIVE_EMAILS = false");
+    @DisplayName("LIVE: Send order confirmation email")
+    public void testSendOrderConfirmationEmail() {
+        Assumptions.assumeTrue(SEND_LIVE_EMAILS, "SEND_LIVE_EMAILS is false");
         Assumptions.assumeTrue(authenticatedSpec != null, "JWT required");
-
-        String timestamp = java.time.LocalDateTime.now()
-                .format(java.time.format.DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
-
-        String htmlContent = """
-                <html>
-                <body style="font-family: Arial;">
-                    <h1 style="color: #4CAF50;">✅ Perfect8 Email Test (v1.3)</h1>
-                    <p>This is an <strong>HTML</strong> test email.</p>
-                    <p>Timestamp: %s</p>
-                </body>
-                </html>
-                """.formatted(timestamp);
-
-        String escapedHtml = htmlContent
-                .replace("\\", "\\\\")
-                .replace("\"", "\\\"")
-                .replace("\n", "\\n");
 
         String emailBody = String.format("""
                 {
                     "to": "%s",
-                    "subject": "Perfect8 HTML Test (v1.3) - %s",
-                    "body": "%s",
-                    "htmlBody": true
+                    "subject": "Perfect8 Test - Order Confirmation",
+                    "templateName": "order-confirmation",
+                    "variables": {
+                        "orderNumber": "TEST-12345",
+                        "customerName": "Test User",
+                        "totalAmount": "99.99",
+                        "currency": "SEK"
+                    }
                 }
-                """, TEST_RECIPIENT, timestamp, escapedHtml);
+                """, RECIPIENT_EMAIL);
 
-        Response response = given()
-                .spec(authenticatedSpec)
-                .body(emailBody)
-        .when()
-                .post(SEND_ENDPOINT)
-        .then()
-                .statusCode(anyOf(is(200), is(201), is(202)))
-                .extract().response();
+        given().spec(authenticatedSpec).body(emailBody)
+        .when().post(SEND_ENDPOINT)
+        .then().statusCode(anyOf(is(200), is(201), is(202)));
 
-        System.out.println("✅ HTML Email sent! Status: " + response.getStatusCode());
+        System.out.println("✅ Order confirmation sent to " + RECIPIENT_EMAIL);
     }
 
     @Test
-    @Order(99)
-    @DisplayName("INFO: Current SEND_LIVE_EMAILS status")
-    public void infoCurrentStatus() {
-        System.out.println("""
-                
-                ╔══════════════════════════════════════════════════════════════╗
-                ║           EMAIL LIVE TEST STATUS (v1.3)                     ║
-                ╠══════════════════════════════════════════════════════════════╣
-                ║  SEND_LIVE_EMAILS = %-5s                                    ║
-                ║  To send emails: Change line 26 to true                     ║
-                ╚══════════════════════════════════════════════════════════════╝
-                """.formatted(SEND_LIVE_EMAILS));
+    @Order(3)
+    @DisplayName("LIVE: Send plain text email")
+    public void testSendPlainTextEmail() {
+        Assumptions.assumeTrue(SEND_LIVE_EMAILS, "SEND_LIVE_EMAILS is false");
+        Assumptions.assumeTrue(authenticatedSpec != null, "JWT required");
+
+        String emailBody = String.format("""
+                {
+                    "to": "%s",
+                    "subject": "Perfect8 Integration Test",
+                    "body": "This is a test email from Perfect8 integration tests. Time: %s"
+                }
+                """, RECIPIENT_EMAIL, java.time.LocalDateTime.now());
+
+        given().spec(authenticatedSpec).body(emailBody)
+        .when().post(SEND_ENDPOINT)
+        .then().statusCode(anyOf(is(200), is(201), is(202)));
+
+        System.out.println("✅ Plain text email sent to " + RECIPIENT_EMAIL);
     }
 }
